bdr.BDR.scala.error
Compilation error:
BDR:1: error: not found: value readmessage
while (readmessage()) {if (readMessage() == "R") {right();
       ^